--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(9_practica_contenedores_toreno_Sant0s0)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(9_practica_contenedores_toreno_Sant0s0 main.cpp Jugador.h Jugador.cpp Torneo.h Videojuego.h Videojuego.cpp)
+add_executable(9_practica_contenedores_toreno_Sant0s0 main.cpp Jugador.h Jugador.cpp Torneo.h Torneo.cpp Videojuego.h Videojuego.cpp)
